small grammer and typo edits

--- a/paper/submission/ZW10157-response-2.tex
+++ b/paper/submission/ZW10157-response-2.tex
@@ -129,7 +129,7 @@ I. paragraph 3: NSGA-II is mentioned but not cited.
 
 II. A. paragraph 4: By calling the selector --$>$ Calling the selector
 
-{\bf Our response:} {\color{blue} This correction is in the new manuscript on line xxx.}
+{\bf Our response:} {\color{blue} This is corrected in the updated manuscript.}
 
 paragraph 4
 also present in GPT's [ref] optimization system --> also
@@ -143,12 +143,12 @@ III. A: paragraph 2
 search algorithm to get stuck --> search algorithm getting
 stuck
 
-{\bf Our response:} {\color{blue} This correction is in the new manuscript on line xxx.}
+{\bf Our response:} {\color{blue} This grammar error is corrected in the updated manuscript.}
 
 III. B. paragraph 3
 checking for idle WORKER --> checking for idle WORKERs
 
-{\bf Our response:} {\color{blue} This correction is in the new manuscript on line xxx.}
+{\bf Our response:} {\color{blue} This typo is corrected in the updated manuscript.}
 
 Fig. 3 caption
 $r_k$ --> $r_1$
@@ -160,9 +160,7 @@ The work $W_j$ are beam dynamics simulation within OPAL.
 III. C. paragraph 1
 shown in Listing 2 --> shown in Listing 1
 
-III. D.
-
-paragraph 1
+III. D. paragraph 1
 The author's use of ``approach'' is ambiguous because it could be
 interpreted as applying EA/GA multi-objective optimization to cavity
 geometries since the emphasis of the paper is on providing a flexible
@@ -174,15 +172,16 @@ A suggested change is:
 general nature of our approach --> general nature of our
 framework's software design
 
-paragraph 1
-the API in Listing 3 --> the API in Listing 2
+{\bf Our response:} {\color{blue} This suggestion was used on line xx.}
 
-paragraph 1
-for those three --> for three
 
-III. E.
+paragraph 1: the API in Listing 3 --$>$ the API in Listing 2
 
-paragraph 1
+paragraph 1: for those three --$>$ for three
+
+{\bf Our response:} {\color{blue} This was corrected in the updated manuscript.}
+
+III. E. paragraph 1:
 An expression parser --> an expression parser
 (Note to authors: ``an expression parser'' is a continuation of the
 sentence started before the code example introduced as an example.)
@@ -190,14 +189,10 @@ sentence started before the code example introduced as an example.)
 paragraph 3
 As shown in Listing 5 --> As shown in Listing 3
 
-IV.
-
-paragraph 1
+IV. paragraph 1:
 in Listing 3 --> in Listing 1
 
-V. B. 2
-
-paragraph 2
+V. B. 2 paragraph 2:
 , and the to prevent --> and to prevent
 
 Table III description, paragraph 2, and paragraph 3
@@ -222,12 +217,7 @@ Fig. 11 Vertical axis units are missing.
 
 {\bf REFEREE B (Remarks to Author), Version 1}
 
-
-
-
 \vspace{1em}
-
-
 That said, a general-purpose optimization system is a useful addition
 to the design tools for accelerators. The way to entice prospective
 users through PRAB is to introduce the system with a very brief
