--- a/paper/submission/prab.tex
+++ b/paper/submission/prab.tex
@@ -501,7 +501,7 @@ As for the \textsc{Optimizer} component there exists a base class, labeled
 In addition, this component also inherits from the \texttt{Worker} class,
   already implementing the polling protocol for default worker types.
 As shown in the API in Listing 3, the \texttt{Worker} class expects an
-  implementation to provide implementations for those three methods.
+  implementation to provide implementations for three methods.
 
 \begin{code}[Simulation API]
 virtual void run() = 0;
