--- a/paper/submission/ZW10157-response-2.tex
+++ b/paper/submission/ZW10157-response-2.tex
@@ -17,7 +17,6 @@ Dear reviewer and editors,
 Thank you for the additional comments.
 We have moved all code implementation details to appendices.
 In addition, further revisions have been made as suggested.
-We hope to show we value the constructive criticism provided.
 The details can be found in the following pages.
 
 With the best regards,  \\[3mm]
@@ -28,8 +27,6 @@ Nicole Neveu, et. al
 
 {\bf REFEREE B (Remarks to Author), Version 2}
 
-
-My thanks, also, to the authors for updating the cited references.
 When blocks of references are provided, conventionally, they are
 listed chronologically to properly recognize the contributions of
 pioneers, and the authors should reorder their citations to follow
@@ -118,14 +115,10 @@ do you want to be effective in reaching as many readers as possible?
 
 {\bf Our response:} {\color{blue} }
 
-
-
-
 Sundry proofreading corrections listed by section.
 I. paragraph 3: NSGA-II is mentioned but not cited.
 
 {\bf Our response:} {\color{blue} The citation has been added.}
-
 
 II. A. paragraph 4: By calling the selector --$>$ Calling the selector
 
@@ -140,25 +133,19 @@ of GPT's work with EA/GA's.)
 {\bf Our response:} {\color{blue} The reference to Cornell was added.}
 
 III. A: paragraph 2
-search algorithm to get stuck --> search algorithm getting
+search algorithm to get stuck --$>$ search algorithm getting
 stuck
 
-{\bf Our response:} {\color{blue} This grammar error is corrected in the updated manuscript.}
-
 III. B. paragraph 3
-checking for idle WORKER --> checking for idle WORKERs
-
-{\bf Our response:} {\color{blue} This typo is corrected in the updated manuscript.}
+checking for idle WORKER --$>$ checking for idle WORKERs
 
 Fig. 3 caption
-$r_k$ --> $r_1$
+$r_k$ --$>$ $r_1$
 The work $W_j$ are beam dynamics simulation within OPAL.
---> $W_j$ performs beam dynamics simulations within OPAL.
-
-{\bf Our response:} {\color{blue} The figure caption has been corrected.}
+--$>$ $W_j$ performs beam dynamics simulations within OPAL.
 
 III. C. paragraph 1
-shown in Listing 2 --> shown in Listing 1
+shown in Listing 2 --$>$ shown in Listing 1
 
 III. D. paragraph 1
 The author's use of ``approach'' is ambiguous because it could be
@@ -169,17 +156,12 @@ design which is what, I think, they meant to convey. The authors
 should make clear which ``approach'' they want the reader to consider.
 A suggested change is:
 
-general nature of our approach --> general nature of our
+general nature of our approach --$>$ general nature of our
 framework's software design
-
-{\bf Our response:} {\color{blue} This suggestion was used on line xx.}
-
 
 paragraph 1: the API in Listing 3 --$>$ the API in Listing 2
 
 paragraph 1: for those three --$>$ for three
-
-{\bf Our response:} {\color{blue} This was corrected in the updated manuscript.}
 
 III. E. paragraph 1:
 An expression parser --> an expression parser
@@ -187,27 +169,32 @@ An expression parser --> an expression parser
 sentence started before the code example introduced as an example.)
 
 paragraph 3
-As shown in Listing 5 --> As shown in Listing 3
+As shown in Listing 5 --$>$ As shown in Listing 3
 
 IV. paragraph 1:
-in Listing 3 --> in Listing 1
+in Listing 3 --$>$ in Listing 1
 
 V. B. 2 paragraph 2:
-, and the to prevent --> and to prevent
+, and the to prevent --$>$ and to prevent
 
 Table III description, paragraph 2, and paragraph 3
 twenty four --> twenty-four
 
 paragraph 3
-but from Fig. 9, but this is --> but from Fig. 9, this is
+but from Fig. 9, but this is --$>$ but from Fig. 9, this is
 
 paragraph 3
-15 less --> 15 fewer
+15 less --$>$ 15 fewer
+
+{\bf Our response:} {\color{blue} All typos/corrections above should be incorporated into the updated manuscript.}
 
 V. B. 3
 paragraph 2 (reported as corrected but is not in the version provided
 to reviewers)
-to to --> to
+to to --$>$ to
+
+{\bf Our response:} {\color{blue} 
+	We were unable to locate this typo. Can the reviewer please provide a line number?}
 
 V. B. 4
 Fig. 11 Vertical axis units are missing.
