removing code sections

--- a/paper/submission/ZW10157-response-2.tex
+++ b/paper/submission/ZW10157-response-2.tex
@@ -15,8 +15,8 @@
 Dear reviewer and editors,
 
 Thank you for the additional comments.
-We have moved all code implementation details to appendices.
-In addition, further revisions have been made as suggested.
+We have moved all code implementation details to Supplemental Materials.
+In addition, further revisions and corrections have been made as suggested.
 The details can be found in the following pages.
 
 With the best regards,  \\[3mm]
@@ -71,10 +71,8 @@ PRAB provides Supplemental Materials storage and access on its web
 site for each paper providing Supplemental Materials). 
 
 {\bf Our response:} {\color{blue} The github link was removed,
-	and Appendix B was added to provide an example OPAL 
-	optimization input file.}
-
-
+	and a section in the Supplemental Materials file
+	was added to provide an example of an OPAL optimization input file.}
 
 I stand by my initial assessment and believe more can be summarized with details
 moved to Appendices or Supplemental Materials without diminishing the
@@ -112,6 +110,10 @@ themselves: Is it more important to be right or effective? Do you want
 to be right on a technicality about ``computing and algorithms,'' or
 do you want to be effective in reaching as many readers as possible?
 
+{\bf Our response: } {\color{blue} All code and an input file example 
+	have been moved to a Supplemental Materials file. 
+	The Referee's initial comments (see pg. 4) were used to 
+	decide which sections would be moved. }
 
 {\bf Our response:} {\color{blue} }
 
@@ -125,7 +127,7 @@ II. A. paragraph 4: By calling the selector --$>$ Calling the selector
 {\bf Our response:} {\color{blue} This is corrected in the updated manuscript.}
 
 paragraph 4
-also present in GPT's [ref] optimization system --> also
+also present in GPT's [ref] optimization system --$>$ also
 present in Cornell's [2005 PRSTAB] and GPT's [ref] optimization systems
 (Note to the authors: Cornell's implementation in APISA pre-dates ALL
 of GPT's work with EA/GA's.)
@@ -199,9 +201,6 @@ to to --$>$ to
 V. B. 4
 Fig. 11 Vertical axis units are missing.
 
-
-
-
 {\bf REFEREE B (Remarks to Author), Version 1}
 
 \vspace{1em}
@@ -220,18 +219,14 @@ subsections B-F:
 Replace with a brief overview and put the details in Supplemental
 Material
 
-{\bf Our response: } {\color{blue} This section has been shortened. However we would like to 
-leave the existing description, in order to drive home the fact that the framework can be 
-easily extended with other optimization algorithms.}
-
 Section VI: 
 Code and input file details should be in Supplemental Material
 
 Section V, subsection B:
 Code and input file details should be in Supplemental Material
 
-{\bf Our response:} {\color{blue} The code examples in sections VI-V have been removed from the updated manuscript. 
-	A sentence and link to the repository have been provided. Interested parties can refer to the repository.}
+{\bf Our response: } {\color{blue} All code and the input file example referenced above have been moved 
+					to a Supplemental Materials file.}
 
 
 
